--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
         </dependency>
 
     <!-- Web -->
-        
+        <dependency>
+            <groupId>ar.com.hjg</groupId>
+            <artifactId>pngj</artifactId>
+            <version>2.1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator</artifactId>
