--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 
     <!-- Web -->
         <dependency>
+            <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
+            <artifactId>owasp-java-html-sanitizer</artifactId>
+            <version>20211018.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>ar.com.hjg</groupId>
             <artifactId>pngj</artifactId>
             <version>2.1.0</version>
